--- a/src/assets/scss/SideBar.module.scss
+++ b/src/assets/scss/SideBar.module.scss
@@ -1,6 +1,5 @@
 .sideBarSec {
     width: 30%;
-    padding: 0 16px;
     height: 100vh;
     display: flex;
     flex-direction: column; /* 子要素を縦方向に並べる */
@@ -10,6 +9,7 @@
     display: flex;
     align-items: center;
     justify-content: space-between;
+    padding: 0 16px;
     & > h1 {
         font-size: 24px;
         color: #333;
@@ -19,10 +19,10 @@
 .noteList {
     padding-left: 0;
     overflow-y: auto;
-    & > li {
+    & > .eachList {
         list-style: none;
         border-top: solid 1px #a4a4a4;
-        padding: 8px 0;
+        padding: 8px 16px;
         & > div {
             display: flex;
             align-items: center;
@@ -42,4 +42,19 @@
             color: #7b7a7a;
         }
     }
+}
+
+.listActive {
+    background-color: #969696;
+}
+
+.content {
+    // width: 100%;
+    // white-space: nowrap;
+    // overflow: hidden;
+    // text-overflow: ellipsis;
+    overflow: hidden;
+    display: -webkit-box;
+    -webkit-box-orient: vertical;
+    -webkit-line-clamp: 2; /* 任意の行数を指定 */
 }
